--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
+# ========================
+# Environnement
+# ========================
 .env
-/.venv
-/*/__pycache__
-/*/*/__pycache__
-agentia/data/state
+.venv/
+venv/
+
+# ========================
+# Python
+# ========================
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.egg-info/
+.pytest_cache/
+.mypy_cache/
+
+# ========================
+# Données runtime (NON versionnées)
+# ========================
+agentia/data/state/history.json
+
+# ========================
+# Exports / fichiers générés
+# ========================
 *.pdf
-/data
+*.txt
+*.csv
+
+# ========================
+# OS / IDE
+# ========================
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# ========================
+# Logs
+# ========================
+*.log
+
+# ========================
+# Jupyter (au cas où)
+# ========================
+.ipynb_checkpoints/
