--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ requests==2.32.5
 requests-toolbelt==1.0.0
 sniffio==1.3.1
 starlette==0.50.0
+sqlalchemy
 tenacity==9.1.2
 tiktoken==0.12.0
 tqdm==4.67.1
