--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ langsmith==0.5.0
 openai==2.14.0
 orjson==3.11.5
 packaging==25.0
+psycopg2-binary
 pydantic==2.12.5
 pydantic_core==2.41.5
 PyJWT==2.10.1
